<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/edtDeviceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ajustes_device_name" />

        <EditText
            android:id="@+id/edtDeviceMac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ajustes_device_mac" />

        <EditText
            android:id="@+id/edtPollHz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ajustes_poll_hz"
            android:inputType="number" />

        <EditText
            android:id="@+id/edtDefaultStep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ajustes_default_step"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/edtDefaultFeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ajustes_default_feed"
            android:inputType="number" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ajustes_guardar" />

        <Button
            android:id="@+id/btnShareLogs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ajustes_compartir_logs" />
    </LinearLayout>
</ScrollView>
