<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/md_bg">

    <TextView
        android:id="@+id/tInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timelapse_info"
        android:textColor="@color/md_text"
        android:textSize="16sp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOpenGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_gallery"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOpenScenes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/escenas"
        android:layout_marginTop="8dp"/>
</LinearLayout>
